Updates for better automatic example detection
