# express/src/services/swagger_output.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.0.0",
+  "openapi": "3.1.0",
   "info": {
     "version": "1.0.0",
     "title": "V2X F24 API",
@@ -21,11 +21,23 @@
           "200": {
             "description": "Root route",
             "content": {
-              "text/html": {
+              "application/json": {
                 "schema": {
-                  "type": "string"
-                },
-                "example": "Root route. For docs, go <a href='/api/v1/docs'>here</a>."
+                  "type": "string",
+                  "example": "Root route. For docs, go <a href='/api/v1/docs'>here</a>.",
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "string",
+                  "example": "Root route. For docs, go <a href='/api/v1/docs'>here</a>.",
+                  "xml": {
+                    "name": "main"
+                  }
+                }
               }
             }
           },
@@ -50,9 +62,21 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "string"
-                },
-                "example": "pong"
+                  "type": "string",
+                  "example": "pong",
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "string",
+                  "example": "pong",
+                  "xml": {
+                    "name": "main"
+                  }
+                }
               }
             }
           },
@@ -77,17 +101,35 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "newMessage": {
-                    "$ref": "#/components/schemas/MongoMessage"
+                  "type": "object",
+                  "properties": {
+                    "newMessage": {
+                      "$ref": "#/components/schemas/MongoMessage"
+                    },
+                    "help": {
+                      "type": "string",
+                      "example": "https://example.com/docs"
+                    }
                   },
-                  "help": "https://example.com/docs"
-                },
-                "example": {
-                  "newMessage": {
-                    "type": "text",
-                    "origin": "recepient",
-                    "date": "2021-06-01T00:00:00.000Z",
-                    "text": "Hello, World!"
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "newMessage": {
+                      "$ref": "#/components/schemas/MongoMessage"
+                    },
+                    "help": {
+                      "type": "string",
+                      "example": "https://example.com/docs"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
                   }
                 }
               }
@@ -141,23 +183,12 @@
           "content": {
             "application/json": {
               "schema": {
-                "$conversation": {
-                  "$ref": "#/components/schemas/MongoConversation"
-                },
-                "help": "https://example.com/docs"
-              },
-              "example": {
-                "conversation": {
-                  "_id": "abc123",
-                  "messages": [
-                    {
-                      "type": "text",
-                      "origin": "recepient",
-                      "date": "2021-06-01T00:00:00.000Z",
-                      "text": "Hello, World!"
-                    }
-                  ]
-                }
+                "$ref": "#/components/schemas/BotQueryRequestBody"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/BotQueryRequestBody"
               }
             }
           }
@@ -187,24 +218,27 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "conversation": {
-                    "$ref": "#/components/schemas/MongoConversation"
-                  }
-                },
-                "example": {
-                  "application/json": {
-                    "ok": true,
+                  "type": "object",
+                  "properties": {
                     "conversation": {
-                      "_id": "abc123",
-                      "messages": [
-                        {
-                          "type": "text",
-                          "origin": "recepient",
-                          "date": "2021-06-01T00:00:00.000Z",
-                          "text": "Hello, World!"
-                        }
-                      ]
+                      "$ref": "#/components/schemas/MongoConversation"
                     }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "conversation": {
+                      "$ref": "#/components/schemas/MongoConversation"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
                   }
                 }
               }
@@ -232,12 +266,11 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
-                },
-                "example": {
-                  "ok": false,
-                  "code": "NOT_FOUND",
-                  "message": "Conversation not found",
-                  "help": "https://example.com/docs"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
                 }
               }
             }
@@ -280,14 +313,20 @@
           "text",
           "image",
           "audio"
-        ]
+        ],
+        "xml": {
+          "name": "MessageType"
+        }
       },
       "MessageOrigin": {
         "type": "string",
         "enum": [
           "recepient",
           "bot"
-        ]
+        ],
+        "xml": {
+          "name": "MessageOrigin"
+        }
       },
       "MongoMessage": {
         "type": "object",
@@ -297,9 +336,15 @@
             "example": "abc123"
           },
           "type": {
+            "xml": {
+              "name": "messagetype"
+            },
             "$ref": "#/components/schemas/MessageType"
           },
           "origin": {
+            "xml": {
+              "name": "messageorigin"
+            },
             "$ref": "#/components/schemas/MessageOrigin"
           },
           "date": {
@@ -324,7 +369,10 @@
           "type",
           "origin",
           "date"
-        ]
+        ],
+        "xml": {
+          "name": "MongoMessage"
+        }
       },
       "ErrorCode": {
         "type": "string",
@@ -334,7 +382,10 @@
           "INTERNAL",
           "NOT_FOUND",
           "NOT_IMPLEMENTED"
-        ]
+        ],
+        "xml": {
+          "name": "ErrorCode"
+        }
       },
       "ErrorResponse": {
         "type": "object",
@@ -344,6 +395,9 @@
             "example": false
           },
           "code": {
+            "xml": {
+              "name": "errorcode"
+            },
             "$ref": "#/components/schemas/ErrorCode"
           },
           "message": {
@@ -359,7 +413,10 @@
           "ok",
           "code",
           "message"
-        ]
+        ],
+        "xml": {
+          "name": "ErrorResponse"
+        }
       },
       "MongoConversation": {
         "type": "object",
@@ -371,13 +428,34 @@
           "messages": {
             "type": "array",
             "items": {
+              "xml": {
+                "name": "mongomessage"
+              },
               "$ref": "#/components/schemas/MongoMessage"
             }
           }
         },
         "required": [
-          "_id"
-        ]
+          "_id",
+          "messages"
+        ],
+        "xml": {
+          "name": "MongoConversation"
+        }
+      },
+      "BotQueryRequestBody": {
+        "type": "object",
+        "properties": {
+          "conversation": {
+            "xml": {
+              "name": "mongoconversation"
+            },
+            "$ref": "#/components/schemas/MongoConversation"
+          }
+        },
+        "xml": {
+          "name": "BotQueryRequestBody"
+        }
       }
     }
   }
